--- a/index.html
+++ b/index.html
@@ -24,88 +24,88 @@
         <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
 
     </header>
+    <main>
+        <div>
+            <h1>Effective Solutions for Your Business</h1>
+            <button>Order Service</button>
+        </div>
+        <section>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution. </p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.
+                    </p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.
+                    </p>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>What are we doing</h2>
+            <img src="img/1.png" alt="img/1.png">
+            <img src="img/2.png" alt="img/2.png">
+            <img src="img/3.png" alt="img/3.png">
+        </section>
+        <div>
+            <h2>Our Team</h2>
+        </div>
+
+        <section>
+            <h2>What are we doing</h2>
+
+            <ul>
+
+                <li>
+                    <img src="img/11.png" alt="img/11.png">
+                    <div>
+                        <h3>Mark Guerrero</h3>
+                        <p>Product Designer</p>
+                    </div>
+                </li>
 
 
-    <div>
-        <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
-    </div>
+                <li>
+                    <img src="img/22.png" alt="img/22.png">
+                    <div>
+                        <h3>Tom Ford</h3>
+                        <p>Frontend Developer</p>
+                    </div>
+                </li>
 
-    <section>
-        <ul>
-            <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business
-                    problem to walk away with the perfect and creative solution. </p>
-            </li>
-            <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
-                </p>
-            </li>
-            <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                    risk.</p>
-            </li>
-            <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                </p>
-            </li>
-        </ul>
-    </section>
+                <li>
+                    <img src="img/33.png" alt="img/33.png">
+                    <div>
+                        <h3>Camila Garcia</h3>
+                        <p>Marketing</p>
+                    </div>
+                </li>
 
-    <section>
-        <h2>What are we doing</h2>
-        <img src="img/1.png" alt="img/1.png">
-        <img src="img/2.png" alt="img/2.png">
-        <img src="img/3.png" alt="img/3.png">
-    </section>
-    <div>
-        <h2>Our Team</h2>
-    </div>
-
-    <section>
-        <h2>What are we doing</h2>
-
-        <ul>
-
-            <li>
-                <img src="img/11.png" alt="img/11.png">
-                <div>
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
-                </div>
-            </li>
-
-
-            <li>
-                <img src="img/22.png" alt="img/22.png">
-                <div>
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
-                </div>
-            </li>
-
-            <li>
-                <img src="img/33.png" alt="img/33.png">
-                <div>
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
-                </div>
-            </li>
-
-            <li>
-                <img src="img/44.png" alt="img/44.png">
-                <div>
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
-                </div>
-            </li>
-        </ul>
-    </section>
-
+                <li>
+                    <img src="img/44.png" alt="img/44.png">
+                    <div>
+                        <h3>Daniel Wilson</h3>
+                        <p>UI Designer</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </main>
     <footer>
         <div>
             <h4>WEB</h4>
