--- a/index.html
+++ b/index.html
@@ -10,18 +10,25 @@
 <body>
     <header>
         <nav>
-            <a href="">WEBStudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+11 (000) 111-11-11</a></li>
-        </ul>
-
+        <address>
+            <ul>
+                <address>
+                    <li>
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="/address>">+11 (000) 111-11-11</a>
+                    </li>
+                </address>
+            </ul>
+        </address>
     </header>
     <main>
         <section>
@@ -59,15 +66,15 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="img/1.png" alt="">
+                    <img src="img/1.png" alt="img/1.png" width="360">
                     <p></p>
                 </li>
                 <li>
-                    <img src="img/2.png" alt="">
+                    <img src="img/2.png" alt="img/2.png" width="360">
                     <p></p>
                 </li>
                 <li>
-                    <img src="img/3.png" alt="">
+                    <img src="img/3.png" alt="img/3.png" width="360">
                     <p></p>
                 </li>
             </ul>
@@ -76,20 +83,35 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="img/11.png" alt="Тут має бути картинка">
+                    <img src="img/11.png" alt="img/11.png" width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="img/22.png" alt="">
+                    <img src="img/22.png" alt="img/22.png" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
+
+                </li>
+                <li>
+                    <img src="img/33.png" alt="img/33.png" width="264">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+
+                </li>
+                <li>
+                    <img src=" img/44.png" alt="img/44.png" width="264">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
 
                 </li>
             </ul>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <a href="./index.html">WebStudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 
 
 
