--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
         </nav>
         <address>
             <ul>
-                <address>
-                    <li>
-                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a href="/address>">+11(000)111-11-11</a>
-                    </li>
-                </address>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel">+11(000)111-11-11</a>
+                </li>
             </ul>
         </address>
     </header>
@@ -66,15 +64,15 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="./images/img/1.png" alt="img/1.png" width="360">
+                    <img src="img/1.png" alt="img/1.png" width="360">
                     <p></p>
                 </li>
                 <li>
-                    <img src="./images/img/2.png" alt="img/2.png" width="360">
+                    <img src="img/2.png" alt="img/2.png" width="360">
                     <p></p>
                 </li>
                 <li>
-                    <img src="./images/img/3.png" alt="img/3.png" width="360">
+                    <img src="img/3.png" alt="img/3.png" width="360">
                     <p></p>
                 </li>
             </ul>
@@ -83,24 +81,24 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/img/11.png" alt="img/11.png" width="264">
+                    <img src="img/11.png" alt="img/11.png" width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img/22.png" alt="img/22.png" width="264">
+                    <img src="img/22.png" alt="img/22.png" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
 
                 </li>
                 <li>
-                    <img src="./images/img/33.png" alt="img/33.png" width="264">
+                    <img src="img/33.png" alt="img/33.png" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
 
                 </li>
                 <li>
-                    <img src="./images/img/44.png" alt="img/44.png" width="264"> 
+                    <img src="img/44.png" alt="img/44.png" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
 
