--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel">+11(000)111-11-11</a>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
@@ -64,15 +64,15 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="img/1.png" alt="img/1.png" width="360">
+                    <img src="./images/1.jpg" alt="img/1.png" width="360">
                     <p></p>
                 </li>
                 <li>
-                    <img src="img/2.png" alt="img/2.png" width="360">
+                    <img src="./images/2.jpg" alt="img/2.png" width="360">
                     <p></p>
                 </li>
                 <li>
-                    <img src="img/3.png" alt="img/3.png" width="360">
+                    <img src="./images/3.jpg" alt="img/3.png" width="360">
                     <p></p>
                 </li>
             </ul>
@@ -81,24 +81,24 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="img/11.png" alt="img/11.png" width="264">
+                    <img src="./images/11.jpg" alt="img/11.png" width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="img/22.png" alt="img/22.png" width="264">
+                    <img src="./images/22.jpg" alt="img/22.png" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
 
                 </li>
                 <li>
-                    <img src="img/33.png" alt="img/33.png" width="264">
+                    <img src="./images/33.jpg" alt="img/33.png" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
 
                 </li>
                 <li>
-                    <img src="img/44.png" alt="img/44.png" width="264">
+                    <img src="./images/44.jpg" alt="img/44.png" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
 
